# mtgso12

./: .gitignore  CMakeLists.txt  README.md  cmp-gso.cpp  icgs.cpp  icgs.h  icgs.tex  lauchli.cpp  randmat.cpp
gama/: README
gso/: mtgso1.f  mtgso2.f
gso/rebuild/: .gitignore  Makefile  gso12_MODE.txt  gso2022.sed
randmat/: 0506-bjorck-01.txt  0516-bjorck-09.txt  0607-bjorck-02.txt  0608-bjorck-06.txt  0609-bjorck-07.txt  0620-bjorck-08.txt  0709-bjorck-05.txt  0812-bjorck-04.txt  1012-bjorck-10.txt  1428-bjorck-03.txt  Makefile  files.txt  randmat.m
randmat/randm-a/: plot.gp  randm-a-01.eps  randm-a-02.eps  randm-a-03.eps  randm-a.m  randmat.sh
randmat/randm-a/old-results/: README.md  randm-a-01.eps  randm-a-02.eps  randm-a-03.eps  randm-a-04.eps  randm-a-05.eps  randm-a-06.eps
